Modify general description

--- a/简介.md
+++ b/简介.md
@@ -1,10 +1,10 @@
 # clitheme简介
 
-`clitheme`是一个主要面向命令行应用程序的文本主题/自定义框架。它允许你修改和自定义命令行应用程序的提示和输出；只要应用程序适配了这个框架。通过编写`主题定义文件`，你可以给你最喜爱的应用程序添加你想要的风格和个性。无论是把它们变得活泼可爱，模拟二次元角色的语句，甚至只是添加多语言支持，`clitheme`允许你自由发挥你的想象，把你的命令行环境变成你想要的样子。
+`clitheme`是一个主要面向命令行应用程序的文本主题/自定义框架。它允许你修改和自定义命令行应用程序的提示和输出；只要应用程序适配了这个框架就可以。通过编写**主题定义文件**，你可以给你最喜爱的应用程序添加你想要的风格和个性。无论是把它们变得活泼可爱，模拟二次元角色的语句，甚至只是添加多语言支持，`clitheme`允许你自由发挥你的想象，把你的命令行环境变成你想要的样子。
 
 ## 样例
 
-比如说，这是一个帮你安装文件的一个小工具，它的输出时这样子的：
+比如说，这是一个帮你安装文件的一个小工具，它的输出是长这样子的：
 
 ```
 $ example-app install-files
@@ -16,7 +16,7 @@ $ example-app install-file foo-nonexist
 错误：找不到文件 "foo-nonexist"
 ```
 
-是不是觉得有一点太平淡无趣了？没关系，我们可以把它的输出变得活泼可爱一点。只需要参考这个工具的相关文档，编写一个`主题定义文件`，里面加上你想要的语句输出：
+是不是觉得有一点太平淡无趣了？没关系，我们可以把它的输出变得活泼可爱一点。只需要参考这个工具的相关文档，编写一个主题定义文件，里面加上你想要的语句输出就可以了：
 
 ```
 begin_header
@@ -68,8 +68,4 @@ $ example-app install-file foo-nonexist
 ಥ_ಥ 糟糕，出错啦！找不到文件 "foo-nonexist"
 ```
 
-我们可以看到这个工具输出了自定义的字符串，变成了你想要的样子。
-
-## 版本
-
-当前的版本是`1.0_r1`，更多信息请见**版本信息**。
+我们可以看到这个工具输出了你自定义的字符串，变成了你想要的样子。关于编写主题定义文件的更多信息，请参考Wiki文章**主题文件的编写**。
