Add type definition to code blocks

--- a/应用程序适配/给用户提供所需的信息.md
+++ b/应用程序适配/给用户提供所需的信息.md
@@ -15,7 +15,7 @@
 
 比如说，应用程序可以允许用户通过`--clitheme-output-defs`等类似参数来输出所有的字符串定义：
 
-```
+```txt
 $ example-app --clitheme-output-defs
 com.example example-app found-file
 zh_CN:
