Add best practices for defining strings

--- a/应用程序适配/给用户提供所需的信息.md
+++ b/应用程序适配/给用户提供所需的信息.md
@@ -35,3 +35,11 @@ zh_CN:
 ```
 
 为了能让用户更方便的访问这个信息，应用程序还可以在官方文档中说明所有的字符串定义，并且包括额外的解释和说明。如需查看样例，请参考本仓库`example-clithemedef`中的README文件。
+
+## 字符串规范和注意事项
+
+当定义字符串时，请注意以下几点：
+
+- 使用特殊符号时请留意会不会被你用的编程语言识别。比如说，Python从函数或文件读取字符串时不会识别其中的`\n`，`\r`等符号，可能需要分条目存储或做一些特殊处理。
+- 请保留如`scanf`或`format`函数需要用到的符号，如`%s`或`{}`。大部分编程语言在此方面不会有问题的。
+    - 除非完全必要，请不要分条目定义同一行上的字符串，并且尽量使用如`scanf`或`format`等字符串格式化函数。
