Add information on best practices

--- a/编写主题定义文件/基本用法.md
+++ b/编写主题定义文件/基本用法.md
@@ -120,3 +120,10 @@ unset_domainapp
 ### 样例
 
 如需样例，请参考本仓库中`example-clithemedef`文件夹下的文件。
+
+## 编写字符串的一些注意事项
+
+如果你编写的字符串在应用程序中无法正常显示或者出现格式错误等问题，请尝试参考一下建议：
+
+- 请保留所有用于`scanf`或`format`等函数的符号，比如`%s`和`{0}`等。一般情况下，这类符号识别起来非常容易。
+- 尽量不要使用向`\n`或`\r`等特殊符号，因为这些符号可能不会被应用程序识别到。
