--- a/关于版本的重要信息.md
+++ b/关于版本的重要信息.md
@@ -11,6 +11,8 @@
 
 这个版本信息会被储存在仓库中的`src/clitheme/_version.py`中，并且会在新的发行版中包括此版本号。
 
+**注意：** 因为pip软件包的命名限制，pip软件包的版本格式为`a.b.postX`。
+
 ## 代码仓库分支
 
 当`clitheme`的下一个主要版本处于开发状态时，我会新建一个分支用于同步下一个版本的开发进度。这样子，当前稳定版本的内容不会收到影响。这个分支的命名格式通常为`a.b-dev`。
