Update versioning information

--- a/关于版本的重要信息.md
+++ b/关于版本的重要信息.md
@@ -15,8 +15,6 @@
 
 ## 代码仓库分支
 
-当`clitheme`的下一个主要版本处于开发状态时，我会新建一个分支用于同步下一个版本的开发进度。这样子，当前稳定版本的内容不会收到影响。这个分支的命名格式通常为`a.b-dev`。
+当`clitheme`的下一个版本处于开发状态时，我会新建一个分支用于同步下一个版本的开发进度。这样子，当前稳定版本的内容不会收到影响。这个分支的命名格式通常为`a.b-dev`或`a.b_rX-dev`。
 
 当下一个主要版本开发完成后，我会把这个分支融合到`latest-STABLE`分支上，并且创建一个新的发行版。`latest-STABLE`是这个仓库的主要分支，包含最新稳定版本的代码内容。
-
-小版本的开发不会创建新的分支；开发完成后会直接同步到`latest-STABLE`分支上。
