Add information about generate-data-hierarchy

--- a/使用命令行界面/命令行界面基本用法.md
+++ b/使用命令行界面/命令行界面基本用法.md
@@ -4,14 +4,14 @@
 
 ## 程序位置和名称
 
-如果你是通过官方发行版的软件包安装的，一般情况下直接在命令行上执行`clitheme`就可以了。
+如果你是通过软件包安装的，一般情况下直接在命令行上执行`clitheme`就可以了。
 
 ```
 $ clitheme
 Usage: /usr/bin/clitheme apply-theme [themedef-file] [--overlay] [--preserve-temp]
        /usr/bin/clitheme get-current-theme-info
        /usr/bin/clitheme unset-current-theme
-       /usr/bin/clitheme generate-data-hierarchy [themedef-file] [--parent-dir [parent directory]]
+       /usr/bin/clitheme generate-data-hierarchy [themedef-file] [--overlay]
        /usr/bin/clitheme --help
        /usr/bin/clitheme --version
 Error: no command or option specified
@@ -26,8 +26,13 @@ Error: no command or option specified
 
 如需应用主题定义文件，请使用`apply-theme`指令，并且提供文件名称。比如：
 
-    $ clitheme apply-theme example-theme.clithemedef.txt
-
+```
+$ clitheme apply-theme example-theme.clithemedef.txt
+==> Generating data...
+Successfully generated data
+==> Applying theme...Success
+Theme applied successfully
+```
 执行这个指令后，支持的应用程序会使用文件中定义的字符串。
 
 ### 主题数据叠加
@@ -39,6 +44,21 @@ Error: no command or option specified
 **提示：** 你可以通过此方法叠加多个语言的主题定义文件，因为该功能只会覆盖字符串对应的语言。
 
     $ clitheme apply-theme --overlay example-theme.clithemedef.txt
+
+### 保留临时数据结构目录
+
+`apply-theme`指令完成后默认会删除存储数据结构的临时目录。如果你想要保留这个临时目录，你可以指定`--preserve-temp`以保留临时目录。
+
+在该模式下，该指令会输出临时目录的路径。你可以通过此路径查看被保留的临时目录。
+
+```
+$ clitheme apply-theme --preserve-temp example-theme.clithemedef.txt 
+==> Generating data...
+Successfully generated data
+View at /tmp/clitheme-temp-XXXXXXXX
+==> Applying theme...Success
+Theme applied successfully
+```
 
 ## `unset-current-theme` - 取消应用/删除当前主题
 
@@ -89,6 +109,19 @@ Supported apps:
 • example-app
 • example-app-two
 • another-example
+```
+
+## `generate-data-hierarchy` - 生成数据结构
+
+使用`generate-data-hierarchy`指令会在临时目录（`/tmp`）中生成数据结构。该指令的功能和`apply-theme`指令相似，只是不会应用主题而已。
+
+指定`--overlay`选项以生成把主题文件叠加在当前数据上的数据结构，用法和`apply-theme`相同。
+
+```
+$ clitheme generate-data-hierarchy example-theme.clithemedef.txt
+==> Generating data...
+Successfully generated data
+View at /tmp/clitheme-temp-XXXXXXXX
 ```
 
 ## `--version` - 输出版本信息
