Add version notice

--- a/简介.md
+++ b/简介.md
@@ -2,6 +2,8 @@
 
 `clitheme`是一个主要面向命令行应用程序的文本主题/自定义框架。它允许你修改和自定义命令行应用程序的提示和输出；只要应用程序适配了这个框架就可以。通过编写**主题定义文件**，你可以给你最喜爱的应用程序添加你想要的风格和个性。无论是把它们变得活泼可爱，模拟二次元角色的语句，甚至只是添加多语言支持，`clitheme`允许你自由发挥你的想象，把你的命令行环境变成你想要的样子。
 
+**这些文档适配`clitheme`的`v1.0-r2`版本。**
+
 ## 样例
 
 比如说，这是一个帮你安装文件的一个小工具，它的输出是长这样子的：
