Add description header information

--- a/编写主题定义文件/基本用法.md
+++ b/编写主题定义文件/基本用法.md
@@ -32,6 +32,7 @@
 在`header`段落内可以定义以下信息。你不需要定义所有的信息，但是建议定义以下所有的信息。
 
 - `name`：定义该主题的名称，如**example-app颜文字主题**。
+- `description`: 定义该主题的更多详细信息。
 - `version`：定义该主题的版本。比如说，如果你添加或修改了其中的内容，你可以通过这个信息来跟踪修改版本，如`1.0`。
 - `locales`：定义主题支持哪些语言。如果支持多个语言，请使用空格分开。比如：`en_US zh_CN`或`English Chinese`
 - `supported_apps`：定义主题支持的应用程序。如果支持多个应用程序，请使用空格分开。比如：`example-app example-app-2 another-example-app`
@@ -43,9 +44,10 @@
 ```
 begin_header
     name example-app颜文字主题
+    description 为example-app制作的一个可爱的颜文字主题
     version 1.0
     locales zh_CN en_US
-    supported_apps clitheme_example example-app example-app-2
+    supported_apps example-app example-app-2
 end_header
 ```
 
