Update cli usage documentation;
- Include multiple file support on apply-theme command
- Rename to generate-data
- Update some formatting and style

--- a/使用命令行界面/命令行界面基本用法.md
+++ b/使用命令行界面/命令行界面基本用法.md
@@ -11,7 +11,7 @@ $ clitheme
 Usage: /usr/bin/clitheme apply-theme [themedef-file] [--overlay] [--preserve-temp]
        /usr/bin/clitheme get-current-theme-info
        /usr/bin/clitheme unset-current-theme
-       /usr/bin/clitheme generate-data-hierarchy [themedef-file] [--overlay]
+       /usr/bin/clitheme generate-data [themedef-file] [--overlay]
        /usr/bin/clitheme --help
        /usr/bin/clitheme --version
 Error: no command or option specified
@@ -30,7 +30,7 @@ Error: no command or option specified
 $ clitheme apply-theme example-theme.clithemedef.txt
 ==> Generating data...
 Successfully generated data
-==> Applying theme...Success
+==> Applying theme...
 Theme applied successfully
 ```
 执行这个指令后，支持的应用程序会使用文件中定义的字符串。
@@ -39,11 +39,13 @@ Theme applied successfully
 
 默认情况下，这个指令会覆盖之前的主题数据。你可以通过`--overlay`选项以叠加定义和数据。新的字符串会被添加到当前的数据中，并且已存在的字符串会被覆盖。
 
+    $ clitheme apply-theme --overlay example-theme.clithemedef.txt
+
 **注意：** 使用此选项时需要确保之前已经设定过主题。
 
-**提示：** 你可以通过此方法叠加多个语言的主题定义文件，因为该功能只会覆盖字符串对应的语言。
+**提示：** 你可以通过此方法叠加多个语言但字符串路径名称相同的的主题定义文件，因为该功能只会覆盖字符串对应的语言。
 
-    $ clitheme apply-theme --overlay example-theme.clithemedef.txt
+**提示：** 你可以同时指定多个文件名称，以同时应用这些文件的定义。指定的文件会以从左到右的顺序应用，比如`clitheme apply-theme file1 file2`会先应用`file1`然后再应用`file2`，相当于先应用`file1`然后把`file2`中的定义叠加到当前数据上。
 
 ### 保留临时数据结构目录
 
@@ -56,7 +58,7 @@ $ clitheme apply-theme --preserve-temp example-theme.clithemedef.txt
 ==> Generating data...
 Successfully generated data
 View at /tmp/clitheme-temp-XXXXXXXX
-==> Applying theme...Success
+==> Applying theme...
 Theme applied successfully
 ```
 
@@ -66,7 +68,6 @@ Theme applied successfully
 
 ```
 $ clitheme unset-current-theme
-==> Removing data...Success
 Successfully removed the current theme data
 ```
 
@@ -111,14 +112,16 @@ Supported apps:
 • another-example
 ```
 
-## `generate-data-hierarchy` - 生成数据结构
+## `generate-data` - 生成数据结构
 
-使用`generate-data-hierarchy`指令会在临时目录（`/tmp`）中生成数据结构。该指令的功能和`apply-theme`指令相似，只是不会应用主题而已。
+使用`generate-data`指令会在临时目录中生成数据结构。该指令的功能和`apply-theme`指令相似，只是不会应用主题而已。该指令用于调试和开发用途。
 
 指定`--overlay`选项以生成把主题文件叠加在当前数据上的数据结构，用法和`apply-theme`相同。
 
+你也可以同时指定多个文件，原理和`apply-theme`一样。
+
 ```
-$ clitheme generate-data-hierarchy example-theme.clithemedef.txt
+$ clitheme generate-data example-theme.clithemedef.txt
 ==> Generating data...
 Successfully generated data
 View at /tmp/clitheme-temp-XXXXXXXX
@@ -130,7 +133,7 @@ View at /tmp/clitheme-temp-XXXXXXXX
 
 ```
 $ clitheme --version
-clitheme version 1.0_r1
+clitheme version 1.1-r1
 ```
 
 详细请见**关于版本的重要信息**。
