--- a/应用程序适配/路径名称和数据结构.md
+++ b/应用程序适配/路径名称和数据结构.md
@@ -2,24 +2,24 @@
 
 应用程序是主要通过**路径名称**来指定所需的字符串。这个路径由空格来区别子路径（`subsections`）。大部分时候路径的前两个名称是用来指定开发者和应用名称的。主题文件会通过该路径名称来适配对应的字符串，从而达到自定义输出的效果。
 
-如果当前主题没有适配请求的字符串，前端API会返回函数调用时提供的备用字符串。
-
 比如`com.example example-app example-text`指的是`com.example`开发的`example-app`中的`example-text`字符串。
 
 当然，路径名称也可以是全局的（不和任何应用信息关联），如`global-entry`或`global-example global-text`。
 
 ## 直接访问主题数据结构
 
-`clitheme`的核心设计理念之一包括无需使用前端API就可以访问主题数据，并且访问方法直观易懂。这一点在使用其他语言编写的程序中尤其重要，因为前端API目前只提供Python程序的支持。
+`clitheme`的核心设计理念之一包括无需使用frontend模块就可以访问主题数据，并且访问方法直观易懂。这一点在使用其他语言编写的程序中尤其重要，因为frontend模块目前只提供Python程序的支持。
 
 `clitheme`的数据结构采用了**子文件夹**的结构，意味着路径中的每一段代表着数据结构中的一个文件夹/文件。
 
-比如说，`com.example example-app example-text` 的字符串会被存储在`$datapath/com.example/example-app/example-text`。一般情况下，`$datapath`（数据根目录）是 `$XDG_DATA_HOME/clitheme/theme-data`或`~/.local/share/clitheme/theme-data`。
+比如说，`com.example example-app example-text` 的字符串会被存储在`<datapath>/com.example/example-app/example-text`。在Linux和macOS系统下，`<datapath>`是 `$XDG_DATA_HOME/clitheme/theme-data`或`~/.local/share/clitheme/theme-data`。
 
-如果需要访问该字符串的其他语言，直接在路径的最后添加`__`加上locale名称就可以了。比如：`$datapath/com.example/example-app/example-text__zh_CN`
+在Windows系统下，`<datapath>`是`%USERPROFILE%\.local\share\clitheme\theme-data`。（`C:\Users\<用户名称>\.local\share\clitheme\theme-data`）
+
+如果需要访问该字符串的其他语言，直接在路径的最后添加`__`加上locale名称就可以了。比如：`<datapath>/com.example/example-app/example-text__zh_CN`
 
 所以说，如果需要直接访问字符串信息，只需要访问对应的文件路径就可以了。
 
 ## 注意事项
 
-- 路径名称的任何子路径不能包括像`/`，`\`等符号，并且不能以`.`开头。
+- 路径名称的任何子路径不能包括`/`和`\`符号，并且不能以`.`开头。
