--- a/简介.md
+++ b/简介.md
@@ -70,4 +70,4 @@ $ example-app install-file foo-nonexist
 ಥ_ಥ 糟糕，出错啦！找不到文件 "foo-nonexist"
 ```
 
-我们可以看到这个工具输出了你自定义的字符串，变成了你想要的样子。关于编写主题定义文件的更多信息，请参考Wiki文章**主题文件的编写**。
+我们可以看到这个工具输出了你自定义的字符串，变成了你想要的样子。关于编写主题定义文件的更多信息，请参考Wiki文章[**编写主题定义文件/基本用法**](编写主题定义文件/基本用法.md)。
