Fix small error in article linking

--- a/编写主题定义文件/基本用法.md
+++ b/编写主题定义文件/基本用法.md
@@ -88,7 +88,7 @@ end_entry
 
 你可以使用`in_domainapp`和`in_subsection`以节省文件中的代码量。被定义时，这个信息会自动被添加在所有的`entry`定义前，以`<domain> <app> <subsections> <path>`的格式处理。
 
-如需了解关于子路径的更多信息，请参考[**应用程序适配/路径名称和数据结构**](应用程序适配/路径名称和数据结构.md)。
+如需了解关于子路径的更多信息，请参考[**应用程序适配/路径名称和数据结构**](../应用程序适配/路径名称和数据结构.md)。
 
 `in_domainapp`的格式为`in_domainapp <domain> <app>`，并且不能有多余的空格。`in_subsection`的格式为`in_subsection <subsection[s]>`，并且可以有多个subsection和空格。
 
