Fix sanity-check-domainapp-err typo; Remove subsection-before-domainapp-err entry.

--- a/字符串定义/数据生成器提示信息.md
+++ b/字符串定义/数据生成器提示信息.md
@@ -90,14 +90,6 @@ Syntax error: Unexpected "phrase" on line 4
 
 > Not enough arguments for "{phrase}" at line {num}
 
-### `subsection-before-domainapp-err`
-
-完整路径名称：`swiftycode clitheme generator subsection-before-domainapp-err`
-
-默认文本：
-
-> Line {num}: in_subsection used before in_domainapp
-
 ### `incomplete-block-err`
 
 完整路径名称：`swiftycode clitheme generator subsection-before-domainapp-err`
@@ -154,7 +146,7 @@ Syntax error: Unexpected "phrase" on line 4
 
 默认文本：
 
-> Line {num}: entry subsections/names {sanitycheck_msg}
+> Line {num}: domain and app names {sanitycheck_msg}
 
 ### `sanity-check-subsection-err`
 
