Add "python3 -m clitheme" to CLI instructions

--- a/使用命令行界面/命令行界面基本用法.md
+++ b/使用命令行界面/命令行界面基本用法.md
@@ -4,7 +4,7 @@
 
 ## 程序位置和名称
 
-如果你是通过软件包安装的，一般情况下直接在命令行上执行`clitheme`就可以了。
+如果你是通过软件包安装的，一般情况下直接在命令行上执行`clitheme`就可以了。你也可以执行`python3 -m clitheme`，如果`clitheme`不可用。
 
 ```
 $ clitheme
