Add clitheme-exec instructions and update themedef instructions

--- a/命令行输出替换/编写定义文件.md
+++ b/命令行输出替换/编写定义文件.md
@@ -125,9 +125,22 @@
 - `smartcmdmatch`：和默认匹配机制相似，但是所有命令中单个横杠（`-`）开头的语句会被拆分成单个选项，如`ls -lih`将会被视为`ls -l -i -h`。带有多个横杠（`--`）的语句不受影响。
 - `normalcmdmatch`：默认匹配机制；用于重置/取消设定之前的设置
 
+样例：
+
+```plaintext
+[filter_commands]
+    example-app la
+    another-app some-arg
+[/filter_commands] strictcmdmatch
+```
+
+## 应用主题（`clitheme apply-theme`）
+
+主题定义文件写好后，你需要应用这个文件到系统中。请在终端执行`clitheme apply-theme <文件名>`以应用主题。应用好主题后，请使用`clitheme-exec`来使用这些匹配规则。详见[使用clitheme-exec](./使用clitheme-exec.md)。
+
 ## 注意事项
 
-- 主题定义文件中的匹配规则会通过以下顺序依次执行；每一部分根据文件中的定义顺序执行：
+- 主题定义文件中的匹配规则会通过以下顺序依次执行；**每一部分根据文件中的*定义顺序*执行**：
     1. 带有命令限制条件并且带有`exactcmdmatch`匹配机制设定的匹配规则
     2. 带有命令限制条件的匹配规则
         - 命令语句最多的将会被优先执行（从多到少）
