Add locale:<locale> syntax; add more to example

--- a/命令行输出替换/编写定义文件.md
+++ b/命令行输出替换/编写定义文件.md
@@ -4,7 +4,7 @@
 
 ## 编写`header`段落
 
-你需要先定义该主题/文件的一些基本信息，包括名称，简介等。请见todo
+你需要先定义该主题/文件的一些基本信息，包括名称、简介等。请见todo
 
 ## `substrules`段落
 
@@ -34,12 +34,16 @@
         [locale] <default或其他系统语言（locale）>
             <替换文本内容>
         [/locale]
+        # 或者：
+        locale:<default或其他系统语言（locale）> <替换文本内容>
     [/substitute_string]
 
     [substitute_regex] <匹配正则表达式>
         [locale] <default或其他系统语言（locale）>
             <替换内容（正则表达式替换语法）>
         [/locale]
+        # 或者：
+        locale:<default或其他系统语言（locale）> <替换文本内容>
     [/substitute_regex]
 {/substrules_section}
 ```
@@ -51,6 +55,8 @@
         - 你可以同时指定多个系统语言；只需要用空格分开就可以了（如`[locale] en_US zh_CN`）
         - 请见todo
     - 替换内容可以是多行的；详见todo
+- 如果替换的内容只有一行，你可以使用`locale:<系统语言>`并且在后面加上替换的内容。这样子写起来会更便捷
+    - 注意：不能同时指定多个系统语言
 - 如果匹配的内容之间有任何终端控制字符，匹配内容中必须包括它。你可以使用`clitheme-exec --debug-showchars`在终端输出中以绿色颜色显示这些字符（详见todo）。如需引用ANSI Escape字符（`{{ESC}}`），请在前面添加`set_options substesc`（详见todo）并且在内容中使用`{{ESC}}`。**如需引用其他字符（如`\x08`、`\x07`等），你必须使用正则表达式替换（`[substitute_regex]`）。**
 - 以`#`开头的行是注释；它们必须定义在新的一行上
 
@@ -66,7 +72,7 @@
 
 更多可以设定的选项请见todo。
 
-样例：
+### 样例
 
 ```plaintext
 {substrules_section}
@@ -83,6 +89,14 @@
             Another good stuff
         [/locale]
     [/substitute_string] noendmatchhere subststdoutonly
+    # 这里定义的noendmatchhere会覆盖之前在set_options中定义的endmatchhere
+    [substitute_regex] Error at file number (?P<num>\d+): item (?P<name>.+) not found
+        # 如果系统语言为zh_CN，会使用以下定义：
+        locale:zh_CN (ToT)/~~~ 在文件\g<num>发生错误：找不到项目"\g<name>"！(>﹏<)
+        # 否则，会使用以下定义：
+        locale:default (ToT)/~~~ Error at file number \g<num>! Could not find item "\g<name>"!
+    [/substitute_regex]
+{/substrules_section}
 ```
 
 ## 限制匹配规则适用的命令
