Add sample tutorial; some changes to the other two files

--- a/命令行输出替换/编写定义文件.md
+++ b/命令行输出替换/编写定义文件.md
@@ -108,6 +108,8 @@
     [filter_commands]
         <命令或由多行分开的多个命令>
     [/filter_commands]
+    # 你也可以使用以下语法：
+    filter_command <命令>
     # 该限制会对以下的规则生效
     [substitute_regex]
         <...>
@@ -124,6 +126,7 @@
 - 在`[filter_commands]`中输入命令以设定限制。定义后，之后定义的匹配规则仅会对这些命令生效。
     - 你可以同时指定多个命令；只需要通过换行分开就可以了
     - 你可以指定带有选项的命令（如`rm -r -f`和`example-app do-something -e`）
+- 你也可以使用`filter_command <命令>`来指定单个命令；这样输入起来会更便捷
 - 使用`unset_filter_command`来取消设定限制。设定后，之后定义的匹配规则不会拥有命令限制。
 
 ### 命令匹配机制&选项
@@ -132,12 +135,14 @@
 
 比如说，用户输入的`rm something -rf`指令会匹配限制条件中的`rm -rf`规则，但不会匹配到`something -rf rm`（因为第一个语句不同）和`rm -f`（因为原命令中不包括`-f`）。
 
-你可以选择其他的匹配机制：它们分别为`strictcmdmatch`，`exactcmdmatch`，和`smartcmdmatch`。只需要在`[/filter_commands]`的后面加上它们就可以了（两者之间加个空格）。你也可以使用`set_options`（详见todo）加上它们，以把它应用到之后所有的命令限制规则定义。
+你可以选择其他的匹配机制：它们分别为`strictcmdmatch`，`exactcmdmatch`，和`smartcmdmatch`。只需要在`[/filter_commands]`的后面加上它们就可以了（两者之间加个空格）。你也可以使用`set_options`（详见todo）加上它们，以把它应用到之后所有的命令限制规则定义。请注意，`filter_command <命令>`语法只能通过`set_options`设定这些选项。
 
 - `strictcmdmatch`：用户输入的命令必须开始于限制条件命令，按语句计算。比如说，用户输入的`example-app something -e`会匹配到限制规则中的`example-app something`，但不会匹配到`example-app -e`（因为`example-app something -e`不以`example-app -e`开始）。
 - `exactcmdmatch`：用户输入的命令必须与限制条件命令完全相同
 - `smartcmdmatch`：和默认匹配机制相似，但是所有命令中单个横杠（`-`）开头的语句会被拆分成单个选项，如`ls -lih`将会被视为`ls -l -i -h`。带有多个横杠（`--`）的语句不受影响。
 - `normalcmdmatch`：默认匹配机制；用于重置/取消设定之前的设置
+
+**注意：**无论选择了哪个匹配选项，如果用户输入的命令中第一个词语包含路径（指定可执行文件），`clitheme`会永远检查并尝试匹配程序名称。比如说，如果用户输入了`/usr/bin/python3 test.py`，`python3 test.py`也会被尝试匹配。
 
 样例：
 
