Add another example to clithemedef instructions

--- a/命令行输出替换/编写定义文件.md
+++ b/命令行输出替换/编写定义文件.md
@@ -148,9 +148,16 @@
 
 ```plaintext
 [filter_commands]
-    example-app la
+    example-app some-opt
     another-app some-arg
 [/filter_commands] strictcmdmatch
+```
+
+```plaintext
+set_options strictcmdmatch
+filter_command example-app some-opt
+# 重置之前设定：
+set_options normalcmdmatch
 ```
 
 ## 应用主题（`clitheme apply-theme`）
