Update document about version information

--- a/关于版本的重要信息.md
+++ b/关于版本的重要信息.md
@@ -3,18 +3,18 @@
 ## 命名方式
 
 `clitheme`采用了以下的版本命名方式：
-`a.b-rX`或`a.b-devYYYYMMDD`
+`a.b.X`或`a.b[.X]-devYYYYMMDD`
 
-- `a.b`代表了主要版本号。当有新的功能加入`clitheme`时，该版本号的`b`值会变更。目前版本号的`a`值不会变更，会保持为`1`。比如说：`1.0`，`1.1`
-- `rX`代表了该版本的发行版次。当小改进和问题修复被加入时，该版本号的`X`值会变更。比如说：`r1`，`r2`
+- `a.b`代表了主要版本号。当有新的功能加入`clitheme`时，该版本号的`b`值会变更。比如说：`1.0`、`1.1`、`2.0`
+- `.X`代表了该版本的发行版次。当小改进和问题修复被加入时，该版本号的`X`值会变更。比如说：`1.0.1`，`2.0.1`
 - `dev`代表了正在开发的下一个版本。当新的改动被同步到仓库时，我会把当天的日期添加在版本号的后面。比如说：`dev20231202`
 
 这个版本信息会被储存在仓库中的`src/clitheme/_version.py`中，并且会在新的发行版中包括此版本号。
 
-**注意：** 因为pip软件包的版本命名限制，pip软件包的版本格式为`a.b.postX`。因为Arch Linux软件包的版本命名限制，版本号中的`-`会被`_`替代（如`a.b_rX`）。
+**注意：** 因为Arch Linux软件包的版本命名限制，版本号中的`-`会被`_`替代（如`a.b_rX`）。
 
 ## 代码仓库分支
 
-当`clitheme`的下一个版本处于开发状态时，我会新建一个分支用于同步下一个版本的开发进度。这样子，当前稳定版本的内容不会收到影响。这个分支的命名格式通常为`a.b_dev`或`a.b-rX_dev`。
+当`clitheme`的下一个版本处于开发状态时，我会新建一个分支用于同步下一个版本的开发进度。这样子，当前稳定版本的内容不会收到影响。这个分支的命名格式通常为`a.b_dev`或`a.b.X_dev`。
 
 当下一个主要版本开发完成后，我会把这个分支融合到`latest-STABLE`分支上，并且创建一个新的发行版。`latest-STABLE`是这个仓库的主要分支，包含最新稳定版本的代码内容。
