--- a/编写主题定义文件/基本用法.md
+++ b/编写主题定义文件/基本用法.md
@@ -12,22 +12,28 @@
 
 你可以使用`#`来标记注释。注释不会被处理或读取。比如：
 
-    # this is a comment
+```plaintext
+# this is a comment
+```
 
 **注意：** 注释只能在新的一行上定义。请不要在行的末尾定义注释。
 
-    # 错误用法：
-    begin_header # Some comments here
+```plaintext
+# 错误用法：
+{header_section} # Some comments here
+```
 
 ## 定义基本信息
 
 为了确保使用命令行工具输出当前主题信息时能清晰的辨识到主题，请在文件中包括并定义一些基本信息。
 
-这些基本信息需要在`header`段落内被定义。如需创建`header`段落，请使用`begin_header`开始段落和`end_header`结束段落。
+这些基本信息需要在`header`段落内被定义。如需创建`header`段落，请使用`{header_section}`开始段落和`{/header_section}`结束段落。
 
-    begin_header
-        <...>
-    end_header
+```plaintext
+{header_section}
+    <...>
+{/header_section}
+```
 
 在`header`段落内可以定义以下信息。你不需要定义所有的信息，但是建议定义以下所有的信息。
 
@@ -42,13 +48,13 @@
 下面将展示一个`header`段落样例：
 
 ```
-begin_header
+{header_section}
     name example-app颜文字主题
     description 为example-app制作的一个可爱的颜文字主题
     version 1.0
     locales zh_CN en_US
     supported_apps example-app example-app-2
-end_header
+{/header_section}
 ```
 
 ## 编写字符串定义
@@ -57,31 +63,31 @@ end_header
 
 所有的字符串定义会被包括在`main`段落中。请使用和`header`段落相同的格式定义`main`段落：
 
-    begin_main
+    {entries_section}
         <...>
-    end_main
+    {/entries_section}
 
-### 使用`entry`段落
+### 使用`entry`定义
 
-要定义一个字符串，请使用`entry`段落，并且包括该字符串的路径名称，如`entry com.example example-app text-one`。如需获取路径名称，请参考相关应用程序的帮助信息或文档。
+要定义一个字符串，请使用`entry`定义，并且包括该字符串的路径名称，如`[entry] com.example example-app text-one`。如需获取路径名称，请参考相关应用程序的帮助信息或文档。
 
-`clitheme`的核心设计理念之一是多语言支持，所以字符串本体需要在`locale`行中定义。`locale`行的格式为：`locale <default|语言> <字符串>`。当前的系统语言会被自动获取，并且会使用对应的定义。
+`clitheme`的核心设计理念之一是多语言支持，所以字符串本体需要在`locale`行中定义。`locale`行的格式为：`locale:<default|语言> <字符串>`。当前的系统语言会被自动获取，并且会使用对应的定义。
 
-`locale`中的语言必须是系统语言格式，如`zh_CN`和`en_US`。你可以在命令行中使用`locale`命令查看当前系统语言。（详见文章**多语言支持**）
+`locale`中的语言必须是系统语言格式，如`zh_CN`和`en_US`。你可以在命令行中使用`locale`命令查看当前系统语言。（详见文章[多语言支持](/多语言支持.md)）
 
-定义字符串时建议添加`default`语言（`locale default <字符串>`）。如果该字符串不支持当前的系统语言，会使用`default`语言定义。如果`default`语言没有被定义，只会在字符串支持当前系统语言的情况下调用该字符串。
+定义字符串时建议添加`default`语言（`locale:default <字符串>`）。如果该字符串不支持当前的系统语言，会使用`default`语言定义。如果`default`语言没有被定义，只会在字符串支持当前系统语言的情况下调用该字符串。
 
 如果你不需要为应用程序添加多语言支持，只定义`default`语言就可以了。
 
 下面将展示一个样例：
 
 ```
-# 在main段落中（begin_main）
-entry com.example example-app text-one
-    locale default Some text
-    locale en_US Some text
-    locale zh_CN 一些文本
-end_entry
+# 在main段落中（{entries_section}）
+[entry] com.example example-app text-one
+    locale:default Some text
+    locale:en_US Some text
+    locale:zh_CN 一些文本
+[/entry]
 ```
 
 ### 使用`in_domainapp`和`in_subsection`
@@ -97,24 +103,24 @@ end_entry
 **注意：** 使用`in_domainapp`和`unset_domainapp`时会同时取消定义之前设定的`in_subsection`信息。
 
 ```
-# 在main段落中（begin_main）
+# 在main段落中（{entries_section}）
 in_domainapp com.example example-app
     # 和 com.example example-app entry-one 相同
-    entry entry-one
-        locale default Some text
-    end_entry
+    [entry] entry-one
+        locale:default Some text
+    [/entry]
 
     in_subsection subsection-one subsection-two
         # 和 com.example example-app subsection-one subsection-two entry-two 相同
-        entry entry-two
-            locale default Some text
-        end_entry
+        [entry] entry-two
+            locale:default Some text
+        [/entry]
 
     in_subsection subsection-three
         # 和 com.example example-app subsection-three entry-three 相同
-        entry entry-three
-            locale default Some text
-        end_entry
+        [entry] entry-three
+            locale:default Some text
+        [/entry]
 # 会同时取消定义subsection
 unset_domainapp
 ```
