--- a/编写主题定义文件/多行输入.md
+++ b/编写主题定义文件/多行输入.md
@@ -1,40 +1,40 @@
-# 多行输入功能
+# 多行内容段落功能
 
-主题定义文件中的部分定义支持段落输入/多行输入。它允许你在一个定义中包括拥有多个行数的字符串，或允许你定义带有空格的名称和项目。
+主题定义文件中的部分定义支持多行内容段落。它允许你在一个定义中包括拥有多个行数的字符串，或允许你定义带有空格的名称和项目。
 
-如需定义多行输入段落，请在支持的定义名称后添加`_block`字样（比如：`locales_block`, `description_block`），并且使用`end_block`结束段落。
+如需定义多行内容段落段落，请在支持的定义名称中添加`[`和`]`（比如：`[locales]`, `[description]`），并且使用`[/<name>]`结束段落（如`[/locales]`，`[/description]`。
 
 ## header段落
 
-在`header`段落中，以下定义支持多行输入：
-- `description`（`description_block`）
-- `supported_apps`（`supported_apps_block`）
-- `locales`（`locales_block`）
+在`header`段落中，以下定义支持多行内容段落：
+- `description`（`[description]`）
+- `supported_apps`（`[supported_apps]`）
+- `locales`（`[locales]`）
 
-在`supported_apps_block`和`locales_block`中，多个项目标注将以换行分开，而不是空格分开。这允许你在项目名称内插入空格。比如：
+在`[supported_apps]`和`[locales]`中，多个项目标注将以换行分开，而不是空格分开。这允许你在项目名称内插入空格。比如：
 
-```
-begin_header
+```plaintext
+{header_section}
     # <...>
-    description_block
+    [description]
         Some description here
         Another description here
-    end_block
-    locales_block
+    [/description]
+    [locales]
         Simplified Chinese (zh_CN)
         English (en_US)
-    end_block
-    supported_apps_block
+    [/locales]
+    [supported_apps]
         App one
         App two
         App three
-    end_block
-end_header
+    [/supported_apps]
+{/header_section}
 ```
 
 使用`clitheme get-current-theme-info`列出信息时会这样展示：
 
-```
+```plaintext
 <...>
 Description:
 Some description here
@@ -49,28 +49,30 @@ Supported apps:
 • App three
 ```
 
-## main段落
+## entries段落
 
-在`main`段落中，`entry`中的字符串定义（`locale`）支持多行输入，并且通过`locale_block`定义。
+在`entries`段落中，`entry`中的字符串定义（`locale`）支持多行内容段落，并且通过`[locale]`定义。
 
 **提示：** 你可以定义多个语言，省去重复复制粘贴的过程。多个语言由空格分开。
 
-```
-begin_header
+```plaintext
+{entries_section}
     <...>
-    entry example-entry
+    [entry] example-entry
         # 你可以定义多个语言
-        locale_block en_US C zh_CN
+        [locale] en_US C zh_CN
             This is an entry
             Another line like that
             A new line
-        end_block
-    end_entry
+        [/locale]
+    [/entry]
+    <...>
+{/entries_section}
 ```
 
 应用程序调用`example-entry`时会显示：
 
-```
+```plaintext
 This is an entry
 Another line like that
 A new line
@@ -79,33 +81,35 @@ A new line
 
 ## 关于缩进/边缘空格的处理
 
-**注意：** 多行输入内容中的结尾空格及whitespace将会被忽略。
+**注意：** 多行内容段落中的结尾空格及whitespace将会被忽略。
 
-但是，起始空格和whitespace会被减去多行输入内容内的共同whitespace大小（tab符号将会被视为8个空格）。这意味着行数之间的缩进差距将会被保留，但是暂不支持在仅有一行的内容中保留缩进和空格。
+但是，起始空格和whitespace会被减去多行内容段落内容内的共同whitespace大小（tab符号将会被视为8个空格）。这意味着行数之间的缩进差距将会被保留。如果你想要在所有的行之前都加上一定大小的whitespace，你可以在结束语句之后添加`leadtabs:<n>`或`leadspaces:<n>`；前者会添加`<n>`个缩进（Tab）符号，后者会添加`<n>`个空格。
 
 这意味着：
 
-```
-entry entry1
-    locale_block default
+```plaintext
+[entry] entry1
+    [locale] default
         Text 1
             Text 2
                 Text 3
         Text 4
-    end_block
-end_entry
-entry entry2
-    locale_block default
-                    Text 1
-    end_block
-end_entry
+    [/locale]
+[/entry]
+[entry] entry2
+    [locale] default
+        Text 1
+        Text 2
+            Text 3
+    [/locale] leadtabs:1
+[/entry]
 
 ```
 
 被读取时会返回以下内容：
 
 `entry1`：
-```
+```plaintext
 Text 1
     Text 2
         Text 3
@@ -114,4 +118,8 @@ Text 4
 
 `entry2`：
 
-    Text 1
+```plaintext
+	Text 1
+    Text 2
+        Text 3
+```
