Change name to 多行内容段落

--- a/多语言支持.md
+++ b/多语言支持.md
@@ -28,24 +28,24 @@ LC_ALL=
 
 定义字符串时建议添加`default`语言。如果该字符串不支持当前的系统语言，会使用`default`语言定义。如果`default`语言没有被定义，只会在字符串支持当前系统语言的情况下调用该字符串。
 
-在多行输入段落下，你可以同时定义多个语言，省去重复复制粘贴内容的过程。
+在多行内容段落段落下，你可以同时定义多个语言，省去重复复制粘贴内容的过程。
 
 **注意：** 目前`clitheme`的自动语言检测不完全支持Windows系统，所以请务必定义`default`语言条目以确保主题定义在Windows系统下生效。
 
 ```
 # ...
-entry com.example example-app example-entry
-    locale default Your entry text here
-    locale en_US Your entry text here
-    locale zh_CN 你的定义文本
-    # 或者使用多行输入（可以同时定义多个语言）
-    locale_block default en_US
+[entry] com.example example-app example-entry
+    locale:default Your entry text here
+    locale:en_US Your entry text here
+    locale:zh_CN 你的定义文本
+    # 或者使用多行内容段落（可以同时定义多个语言）
+    [locale] default en_US
         Your entry text here
-    end_block
-    locale_block zh_CN
+    [/locale]
+    [locale] zh_CN
         你的定义文本
-    end_block
-end_entry
+    [/locale]
+[/entry]
 ```
 
 ## frontend模块：设定语言和禁用语言检测
