Add notice on using locale:default as fallback option

--- a/命令行输出替换/编写定义文件.md
+++ b/命令行输出替换/编写定义文件.md
@@ -53,7 +53,8 @@
 - 使用以`[locale]`开头的内容段落输入要替换的内容
     - 在`[locale]`之后可以定义系统语言（locale）：当前的系统语言设定符合这个定义时才会执行替换；如不需要限制系统语言，请使用`default`。
         - 你可以同时指定多个系统语言；只需要用空格分开就可以了（如`[locale] en_US zh_CN`）
-        - 请见todo
+        - 带有语言设定的定义会比带有`default`设定的定义有更高的优先级。`default`更像是一个fallback选项：如果没有任何匹配到的带有语言设定的内容定义时才会使用带有`default`的定义。
+        - 更多信息请见todo
     - 替换内容可以是多行的；详见todo
 - 如果替换的内容只有一行，你可以使用`locale:<系统语言>`并且在后面加上替换的内容。这样子写起来会更便捷
     - 注意：不能同时指定多个系统语言
