Change content blocks to "plaintext" language mode

--- a/多语言支持.md
+++ b/多语言支持.md
@@ -8,7 +8,7 @@ clitheme的核心设计理念之一是对多语言的支持。它可以自动检
 
 你可以在命令行中使用`locale`命令查看当前系统语言（Windows系统除外）。你可以参考输出中的`LANG`和`LANGUAGE`信息作为语言名称。
 
-```
+```plaintext
 $ locale
 LANG="en_US.UTF-8"
 LC_COLLATE="en_US.UTF-8"
@@ -32,7 +32,7 @@ LC_ALL=
 
 **注意：** 目前`clitheme`的自动语言检测不完全支持Windows系统，所以请务必定义`default`语言条目以确保主题定义在Windows系统下生效。
 
-```
+```plaintext
 # ...
 [entry] com.example example-app example-entry
     locale:default Your entry text here
