--- a/字符串定义/命令行指令.md
+++ b/字符串定义/命令行指令.md
@@ -78,7 +78,7 @@
 
 ### 样例输出 - `apply-theme`
 
-```
+```plaintxet
 $ clitheme apply-theme [...]
 The following defintion files will be applied in the following order:
 {...}
@@ -96,7 +96,7 @@ Theme applied successfully
 
 对应着以下字符串定义：
 
-```
+```plaintext
 [apply-theme-msg]
 {...}
 [overwrite-notice]
@@ -113,7 +113,7 @@ Theme applied successfully
 
 ### 样例输出 - `generate-data`
 
-```
+```plaintext
 $ clitheme generate-data [...]
 The theme data will be generated from the following definition files in the following order:
 {...}
@@ -123,7 +123,7 @@ View at /tmp/clitheme-temp-XXXXXXXX
 ```
 
 对应着以下字符串定义：
-```
+```plaintext
 [generate-data-msg]
 {...}
 [generating-data]
@@ -183,11 +183,13 @@ View at /tmp/clitheme-temp-XXXXXXXX
 
 如果指定了`--overlay`选项，该文本将会在`confirm-prompt`之后被输出。比如：
 
-    {...}
-    Do you want to continue? [y/n]
-    Overlay specified
-    ==> Generating data...
-    {...}
+```plaintext
+{...}
+Do you want to continue? [y/n]
+Overlay specified
+==> Generating data...
+{...}
+```
 
 ### `generating-data`
 
@@ -335,7 +337,7 @@ View at /tmp/clitheme-temp-XXXXXXXX
 
 ### 样例输出
 
-```
+```plaintext
 Currently installed theme:
 [1]: Example theme
 Version: 1.0
@@ -351,7 +353,7 @@ Supported apps:
 
 对应着以下字符串定义：
 
-```
+```plaintext
 [current-theme-msg]
 none
 [version-str]
