--- a/字符串定义/数据生成器提示信息.md
+++ b/字符串定义/数据生成器提示信息.md
@@ -6,7 +6,7 @@
 
 样例提示信息输出（`apply-theme`指令）：
 
-```
+```plaintext
 {...}
 ==> Generating data...
 [File 1] An error occurred while generating the data:
