--- a/编写主题定义文件/基本用法.md
+++ b/编写主题定义文件/基本用法.md
@@ -47,7 +47,7 @@
 
 下面将展示一个`header`段落样例：
 
-```
+```plaintext
 {header_section}
     name example-app颜文字主题
     description 为example-app制作的一个可爱的颜文字主题
@@ -81,7 +81,7 @@
 
 下面将展示一个样例：
 
-```
+```plaintext
 # 在main段落中（{entries_section}）
 [entry] com.example example-app text-one
     locale:default Some text
@@ -102,7 +102,7 @@
 
 **注意：** 使用`in_domainapp`和`unset_domainapp`时会同时取消定义之前设定的`in_subsection`信息。
 
-```
+```plaintext
 # 在main段落中（{entries_section}）
 in_domainapp com.example example-app
     # 和 com.example example-app entry-one 相同
