--- a/简介.md
+++ b/简介.md
@@ -8,7 +8,7 @@
 
 比如说，这是一个帮你安装文件的一个小工具，它的输出是长这样子的：
 
-```txt
+```plaintext
 $ example-app install-files
 在当前目录找到了2个文件
 -> 正在安装 "example-file"...
@@ -20,7 +20,7 @@ $ example-app install-file foo-nonexist
 
 是不是觉得有一点太平淡无趣了？没关系，我们可以把它的输出变得活泼可爱一点。只需要参考这个工具的相关文档，编写一个主题定义文件，里面加上你想要的语句输出就可以了：
 
-```txt
+```plaintext
 begin_header
     name 样例主题
     version 1.0
@@ -50,7 +50,7 @@ end_main
 
 相比之前是不是变可爱了很多？接下来，我们通过`clitheme`的命令行工具来应用一下这个主题：
 
-```txt
+```plaintext
 $ clitheme apply-theme example-app-theme_clithemedef.txt
 ==> Generating data...
 Successfully generated data
@@ -60,7 +60,7 @@ Theme applied successfully
 
 现在，这个主题已经应用在你的电脑中了。对应的应用程序可以访问并且显示你写的自定义字符串，从而达到自定义输出的效果。我们再运行一下这个小工具：
 
-```txt
+```plaintext
 $ example-app install-files
 o(≧v≦)o 太好了，在当前目录找到了2个文件！
 (>^ω^<) 正在安装 "example-file"...
