--- a/命令行输出替换/编写定义文件.md
+++ b/命令行输出替换/编写定义文件.md
@@ -163,7 +163,7 @@ set_options normalcmdmatch
 
 ## 应用主题（`clitheme apply-theme`）
 
-主题定义文件写好后，你需要应用这个文件到系统中。请在终端执行`clitheme apply-theme <文件名>`以应用主题。应用好主题后，请使用`clitheme-exec`来使用这些匹配规则。详见[使用clitheme-exec](./使用clitheme-exec.md)。
+主题定义文件写好后，你需要应用这个文件到系统中。请在终端执行`clitheme apply-theme <文件名>`以应用主题。应用好主题后，请使用`clitheme-exec`来使用这些匹配规则。详见[使用clitheme-exec](使用clitheme-exec.md)。
 
 ## 注意事项
 
