--- a/编写主题定义文件/基本用法.md
+++ b/编写主题定义文件/基本用法.md
@@ -73,7 +73,7 @@
 
 `clitheme`的核心设计理念之一是多语言支持，所以字符串本体需要在`locale`行中定义。`locale`行的格式为：`locale:<default|语言> <字符串>`。当前的系统语言会被自动获取，并且会使用对应的定义。
 
-`locale`中的语言必须是系统语言格式，如`zh_CN`和`en_US`。你可以在命令行中使用`locale`命令查看当前系统语言。（详见文章[多语言支持](/多语言支持.md)）
+`locale`中的语言必须是系统语言格式，如`zh_CN`和`en_US`。你可以在命令行中使用`locale`命令查看当前系统语言。（详见文章[多语言支持](../多语言支持.md)）
 
 定义字符串时建议添加`default`语言（`locale:default <字符串>`）。如果该字符串不支持当前的系统语言，会使用`default`语言定义。如果`default`语言没有被定义，只会在字符串支持当前系统语言的情况下调用该字符串。
 
