Fill in placeholder links marked as todo

--- a/主题定义文件通用语法/文件格式和语法.md
+++ b/主题定义文件通用语法/文件格式和语法.md
@@ -6,7 +6,7 @@
 
 主题定义文件是按照段落来区分所对应的内容的。每一个段落对应着不同的功能，并且包含着不同的内容定义。每一个段落用`{<段落名称>_section}`和`{/<段落名称>_section}`来标记开始和结束。
 
-每一个主题定义文件中都会包含`header`段落（`{header_section}`）。这个段落中包含了这个主题定义的一些基本信息，比如名称，详细介绍，版本，支持的应用程序等。它的作用是给用户提供更多有用的信息。详细请见todo。
+每一个主题定义文件中都会包含`header`段落（`{header_section}`）。这个段落中包含了这个主题定义的一些基本信息，比如名称，详细介绍，版本，支持的应用程序等。它的作用是给用户提供更多有用的信息。详细请见[header段落](header段落.md)。
 
 大概语法如下：
 
