--- a/命令行输出替换/编写定义文件.md
+++ b/命令行输出替换/编写定义文件.md
@@ -4,7 +4,7 @@
 
 ## 编写`header`段落
 
-你需要先定义该主题/文件的一些基本信息，包括名称、简介等。请见todo
+你需要先定义该主题/文件的一些基本信息，包括名称、简介等。请见[header段落](../主题定义文件通用语法/header段落.md)
 
 ## `substrules`段落
 
@@ -55,10 +55,10 @@
         - 你可以同时指定多个系统语言；只需要用空格分开就可以了（如`[locale] en_US zh_CN`）
         - 带有语言设定的定义会比带有`default`设定的定义有更高的优先级。`default`更像是一个fallback选项：如果没有任何匹配到的带有语言设定的内容定义时才会使用带有`default`的定义。
         - 更多信息请见todo
-    - 替换内容可以是多行的；详见todo
+    - 替换内容可以是多行的；详见[多行内容段落](../主题定义文件通用语法/多行内容段落.md)
 - 如果替换的内容只有一行，你可以使用`locale:<系统语言>`并且在后面加上替换的内容。这样子写起来会更便捷
     - 注意：不能同时指定多个系统语言
-- 如果匹配的内容之间有任何终端控制字符，匹配内容中必须包括它。你可以使用`clitheme-exec --debug-showchars`在终端输出中以绿色颜色显示这些字符（详见todo）。如需引用ANSI Escape字符（`{{ESC}}`），请在前面添加`set_options substesc`（详见todo）并且在内容中使用`{{ESC}}`。**如需引用其他字符（如`\x08`、`\x07`等），你必须使用正则表达式替换（`[substitute_regex]`）。**
+- 如果匹配的内容之间有任何终端控制字符，匹配内容中必须包括它。你可以使用`clitheme-exec --debug-showchars`在终端输出中以绿色颜色显示这些字符（详见[使用clitheme-exec](使用clitheme-exec.md)）。如需引用ANSI Escape字符（`{{ESC}}`），请在前面添加`set_options substesc`（详见todo）并且在内容中使用`{{ESC}}`。**如需引用其他字符（如`\x08`、`\x07`等），你必须使用正则表达式替换（`[substitute_regex]`）。**
 - 以`#`开头的行是注释；它们必须定义在新的一行上
 
 ### 可以设定的选项
