Add block input docs; change reference in old file

--- a/编写主题定义文件/多行内容段落.md
+++ b/编写主题定义文件/多行内容段落.md
@@ -1,4 +1,4 @@
-# 多行内容段落功能
+# 多行内容段落
 
 主题定义文件中的部分定义支持多行内容段落。它允许你在一个定义中包括拥有多个行数的字符串，或允许你定义带有空格的名称和项目。
 
@@ -6,48 +6,7 @@
 
 ## header段落
 
-在`header`段落中，以下定义支持多行内容段落：
-- `description`（`[description]`）
-- `supported_apps`（`[supported_apps]`）
-- `locales`（`[locales]`）
-
-在`[supported_apps]`和`[locales]`中，多个项目标注将以换行分开，而不是空格分开。这允许你在项目名称内插入空格。比如：
-
-```plaintext
-{header_section}
-    # <...>
-    [description]
-        Some description here
-        Another description here
-    [/description]
-    [locales]
-        Simplified Chinese (zh_CN)
-        English (en_US)
-    [/locales]
-    [supported_apps]
-        App one
-        App two
-        App three
-    [/supported_apps]
-{/header_section}
-```
-
-使用`clitheme get-current-theme-info`列出信息时会这样展示：
-
-```plaintext
-<...>
-Description:
-Some description here
-Another description here
-
-Supported locales:
-• Simplified Chinese (zh_CN)
-• English (en_US)
-Supported apps:
-• App one
-• App two
-• App three
-```
+请见[主题定义文件通用语法/header段落](../主题定义文件通用语法/header段落.md)。
 
 ## entries段落
 
@@ -78,48 +37,6 @@ Another line like that
 A new line
 ```
 
+## 更多信息
 
-## 关于缩进/边缘空格的处理
-
-**注意：** 多行内容段落中的结尾空格及whitespace将会被忽略。
-
-但是，起始空格和whitespace会被减去多行内容段落内容内的共同whitespace大小（tab符号将会被视为8个空格）。这意味着行数之间的缩进差距将会被保留。如果你想要在所有的行之前都加上一定大小的whitespace，你可以在结束语句之后添加`leadtabs:<n>`或`leadspaces:<n>`；前者会添加`<n>`个缩进（Tab）符号，后者会添加`<n>`个空格。
-
-这意味着：
-
-```plaintext
-[entry] entry1
-    [locale] default
-        Text 1
-            Text 2
-                Text 3
-        Text 4
-    [/locale]
-[/entry]
-[entry] entry2
-    [locale] default
-        Text 1
-        Text 2
-            Text 3
-    [/locale] leadtabs:1
-[/entry]
-
-```
-
-被读取时会返回以下内容：
-
-`entry1`：
-```plaintext
-Text 1
-    Text 2
-        Text 3
-Text 4
-```
-
-`entry2`：
-
-```plaintext
-	Text 1
-    Text 2
-        Text 3
-```
+更多信息请见[主题定义文件通用语法/多行内容段落](../主题定义文件通用语法/多行内容段落.md)。
