Move multi-language article to folder; Change some information

--- a/主题定义文件通用语法/多语言支持.md
+++ b/主题定义文件通用语法/多语言支持.md
@@ -22,30 +22,43 @@ LC_ALL=
 
 ## 主题定义文件：为字符串定义添加多个语言版本
 
-你可以为一个字符串定于添加多个语言版本。`clitheme`会根据系统语言或者应用程序的语言设定自动选择相应的定义。
+你可以为一个字符串定义和命令行输出替换规则添加多个语言版本。`clitheme`会根据系统语言或者应用程序的语言设定自动选择相应的定义。
 
-关于更多信息，请参考[**编写主题定义文件/基本用法**](编写主题定义文件/基本用法.md)中的**使用`entry`段落**。
+关于更多信息，请参考[**编写主题定义文件/基本用法**](../编写主题定义文件/基本用法.md)中的**使用`entry`段落**。
 
-定义字符串时建议添加`default`语言。如果该字符串不支持当前的系统语言，会使用`default`语言定义。如果`default`语言没有被定义，只会在字符串支持当前系统语言的情况下调用该字符串。
+定义时建议添加`default`语言。如果该定义不支持当前的系统语言，会使用`default`语言定义。如果`default`语言没有被定义，只会在该定义支持当前系统语言的情况下才会被调用。
 
 在多行内容段落段落下，你可以同时定义多个语言，省去重复复制粘贴内容的过程。
 
 **注意：** 目前`clitheme`的自动语言检测不完全支持Windows系统，所以请务必定义`default`语言条目以确保主题定义在Windows系统下生效。
 
 ```plaintext
-# ...
-[entry] com.example example-app example-entry
-    locale:default Your entry text here
-    locale:en_US Your entry text here
-    locale:zh_CN 你的定义文本
-    # 或者使用多行内容段落（可以同时定义多个语言）
-    [locale] default en_US
-        Your entry text here
-    [/locale]
-    [locale] zh_CN
-        你的定义文本
-    [/locale]
-[/entry]
+{entries_section}
+    # ...
+    [entry] com.example example-app example-entry
+        locale:default Your entry text here
+        locale:en_US Your entry text here
+        locale:zh_CN 你的定义文本
+        # 或者使用多行内容段落（可以同时定义多个语言）
+        [locale] default en_US
+            Your entry text here
+        [/locale]
+        [locale] zh_CN
+            你的定义文本
+        [/locale]
+    [/entry]
+{/entries_section}
+{substrules_section}
+    # ...
+    [substitute_string] Some example output message
+        locale:default Output message! :)
+        locale:zh_CN 输出提示！o(≧v≦)o
+        # 同时定义default、C、和en_US语言
+        [locale] default C en_US
+            Output message! :)
+        [/locale]
+    [/substitute_string]
+{/substrules_section}
 ```
 
 ## frontend模块：设定语言和禁用语言检测
