Add links to new documentation article

--- a/主题定义文件通用语法/内容变量.md
+++ b/主题定义文件通用语法/内容变量.md
@@ -51,7 +51,7 @@ setvar:place2 version
 
 **注意：** 如果变量内容中带有`{{ESC}}`字样，且`substesc`选项是设定的，变量内容中的`{{ESC}}`在定义时不会被处理；只会在相应地方和定义使用中才会被处理。
 
-如需禁用变量替换，请取消设定`substvar`选项（使用`set_options nosubstvar`）。更多信息请见todo。
+如需禁用变量替换，请取消设定`substvar`选项（使用`set_options nosubstvar`）。更多信息请见[可以设定的选项](./可以设定的选项.md)。
 
 ## 在变量定义中引用另一个变量的内容
 
