--- a/命令行输出替换/编写定义文件.md
+++ b/命令行输出替换/编写定义文件.md
@@ -54,11 +54,11 @@
     - 在`[locale]`之后可以定义系统语言（locale）：当前的系统语言设定符合这个定义时才会执行替换；如不需要限制系统语言，请使用`default`。
         - 你可以同时指定多个系统语言；只需要用空格分开就可以了（如`[locale] en_US zh_CN`）
         - 带有语言设定的定义会比带有`default`设定的定义有更高的优先级。`default`更像是一个fallback选项：如果没有任何匹配到的带有语言设定的内容定义时才会使用带有`default`的定义。
-        - 更多信息请见todo
+        - 更多信息请见[多语言支持](../主题定义文件通用语法/多语言支持.md)
     - 替换内容可以是多行的；详见[多行内容段落](../主题定义文件通用语法/多行内容段落.md)
 - 如果替换的内容只有一行，你可以使用`locale:<系统语言>`并且在后面加上替换的内容。这样子写起来会更便捷
     - 注意：不能同时指定多个系统语言
-- 如果匹配的内容之间有任何终端控制字符，匹配内容中必须包括它。你可以使用`clitheme-exec --debug-showchars`在终端输出中以绿色颜色显示这些字符（详见[使用clitheme-exec](使用clitheme-exec.md)）。如需引用ANSI Escape字符（`{{ESC}}`），请在前面添加`set_options substesc`（详见todo）并且在内容中使用`{{ESC}}`。**如需引用其他字符（如`\x08`、`\x07`等），你必须使用正则表达式替换（`[substitute_regex]`）。**
+- 如果匹配的内容之间有任何终端控制字符，匹配内容中必须包括它。你可以使用`clitheme-exec --debug-showchars`在终端输出中以绿色颜色显示这些字符（详见[使用clitheme-exec](使用clitheme-exec.md)）。如需引用ANSI Escape字符（`{{ESC}}`），请在前面添加`set_options substesc`（详见[可以设定的选项](../主题定义文件通用语法/可以设定的选项.md)）并且在内容中使用`{{ESC}}`。**如需引用其他字符（如`\x08`、`\x07`等），你必须使用正则表达式替换（`[substitute_regex]`）。**
 - 以`#`开头的行是注释；它们必须定义在新的一行上
 
 ### 可以设定的选项
@@ -71,7 +71,7 @@
 - `subststderronly`：仅匹配standard error的输出内容
 - `substall`：默认设定；用于重置之前设定；匹配所有内容
 
-更多可以设定的选项请见todo。
+更多可以设定的选项请见[可以设定的选项](../主题定义文件通用语法/可以设定的选项.md)。
 
 ### 样例
 
@@ -90,7 +90,7 @@
             Another good stuff
         [/locale]
     [/substitute_string] noendmatchhere subststdoutonly
-    # 这里定义的noendmatchhere会覆盖之前在set_options中定义的endmatchhere
+    # 上方定义的noendmatchhere会覆盖之前在set_options中定义的endmatchhere
     [substitute_regex] Error at file number (?P<num>\d+): item (?P<name>.+) not found
         # 如果系统语言为zh_CN，会使用以下定义：
         locale:zh_CN (ToT)/~~~ 在文件\g<num>发生错误：找不到项目"\g<name>"！(>﹏<)
@@ -136,7 +136,7 @@
 
 比如说，用户输入的`rm something -rf`指令会匹配限制条件中的`rm -rf`规则，但不会匹配到`something -rf rm`（因为第一个语句不同）和`rm -f`（因为原命令中不包括`-f`）。
 
-你可以选择其他的匹配机制：它们分别为`strictcmdmatch`，`exactcmdmatch`，和`smartcmdmatch`。只需要在`[/filter_commands]`的后面加上它们就可以了（两者之间加个空格）。你也可以使用`set_options`（详见todo）加上它们，以把它应用到之后所有的命令限制规则定义。请注意，`filter_command <命令>`语法只能通过`set_options`设定这些选项。
+你可以选择其他的匹配机制：它们分别为`strictcmdmatch`，`exactcmdmatch`，和`smartcmdmatch`。只需要在`[/filter_commands]`的后面加上它们就可以了（两者之间加个空格）。你也可以使用`set_options`（详见[可以设定的选项](../主题定义文件通用语法/可以设定的选项.md)）加上它们，以把它应用到之后所有的命令限制规则定义。请注意，`filter_command <命令>`语法只能通过`set_options`设定这些选项。
 
 - `strictcmdmatch`：用户输入的命令必须开始于限制条件命令，按语句计算。比如说，用户输入的`example-app something -e`会匹配到限制规则中的`example-app something`，但不会匹配到`example-app -e`（因为`example-app something -e`不以`example-app -e`开始）。
 - `exactcmdmatch`：用户输入的命令必须与限制条件命令完全相同
