--- a/主题定义文件通用语法/多行内容段落.md
+++ b/主题定义文件通用语法/多行内容段落.md
@@ -32,7 +32,7 @@
 
 但是，起始空格和whitespace会被减去多行内容段落内容内的共同whitespace大小（tab符号将会被视为8个空格）。这意味着行数之间的缩进差距将会被保留。如果你想要在所有的行之前都加上一定大小的whitespace，你可以在结束语句之后添加`leadtabs:<n>`或`leadspaces:<n>`；前者会添加`<n>`个缩进（Tab）符号，后者会添加`<n>`个空格。
 
-你也可以使用`set_options`来对之后定义的所有段落应用这些选项，如`set_options leadtabs:1`或`set_options leadspaces:4`。详细请见todo。
+你也可以使用`set_options`来对之后定义的所有段落应用这些选项，如`set_options leadtabs:1`或`set_options leadspaces:4`。详细请见[可以设定的选项](./可以设定的选项.md)。
 
 这意味着：
 
