Rearrange layout of options doc article

--- a/主题定义文件通用语法/可以设定的选项.md
+++ b/主题定义文件通用语法/可以设定的选项.md
@@ -2,11 +2,45 @@
 
 本文章将介绍主题定义文件中可以设定的选项，以及如何使用并设定它们。
 
+## 如何设定选项
+
+你可以使用`set_options <选项>`语法来设定选项。你可以同时指定多个选项设定；只需要使用空格分开即可。设定后，这些选项将会被应用在该语句之后的相关定义。比如：`set_options substesc substvar leadtabs:1`
+
+你也可以对单个定义设定这些选项；只需要在它们的结束语句之后添加这些选项设定就可以了。这些设定会覆盖之前通过`set_options`设定的选项设置。比如说：`[/substitute_regex] subststdoutonly substesc leadspaces:4`
+
+```plaintext
+{substrules_section}
+    # substesc和endmatchhere选项会对以下所有的匹配规则生效
+    set_options endmatchhere substesc
+    [substitute_string] Some text
+        [locale] default
+            Some other text here
+            Good stuff {{ESC}}
+        [/locale]
+    [/substitute_string] subststderronly
+    [substitute_string] Some other text
+        [locale] default
+            Another good stuff
+        [/locale]
+    [/substitute_string] noendmatchhere subststdoutonly
+    # 上方定义的noendmatchhere会覆盖之前在set_options中定义的endmatchhere
+    [substitute_regex] Error at file number (?P<num>\d+): item (?P<name>.+) not found
+        # 如果想对以下内容设定选项，需要使用多行内容段落
+        locale:zh_CN (ToT)/~~~ 在文件\g<num>发生错误：找不到项目"\g<name>"！(>﹏<)
+        locale:default (ToT)/~~~ Error at file number \g<num>! Could not find item "\g<name>"!
+    [/substitute_regex]
+{/substrules_section}
+```
+
+### 全局定义和段落内定义的区别
+
+全局定义是指在段落外定义的选项设定；段落内定义的选项设定只会在该段落内有效。结束该段落后，当前的选项设定将会复原成现有的全局定义。
+
 ## 选项定义
 
 ### 多行内容段落缩进/空格设定
 
-以下几个设定适用于多行内容段落：
+以下几个设定适用于多行内容段落（`header`段落仅支持`[description]`段落）：
 
 以下设定中的`<n>`应该输入一个整数数字，并且选项名称与数值之间不能有空格。比如：`leadspaces:4`
 
@@ -58,37 +92,3 @@
 ---
 - `endmatchhere`，`noendmatchhere`：当遇到带有该选项的匹配规则时，不再继续应用其他的匹配规则
     - 使用`noendmatchhere`以取消设定
-
-## 如何设定选项
-
-你可以使用`set_options <选项>`语法来设定选项。你可以同时指定多个选项设定；只需要使用空格分开即可。设定后，这些选项将会被应用在该语句之后的相关定义。比如：`set_options substesc substvar leadtabs:1`
-
-你也可以对单个定义设定这些选项；只需要在它们的结束语句之后添加这些选项设定就可以了。这些设定会覆盖之前通过`set_options`设定的选项设置。比如说：`[/substitute_regex] subststdoutonly substesc leadspaces:4`
-
-```plaintext
-{substrules_section}
-    # substesc和endmatchhere选项会对以下所有的匹配规则生效
-    set_options endmatchhere substesc
-    [substitute_string] Some text
-        [locale] default
-            Some other text here
-            Good stuff {{ESC}}
-        [/locale]
-    [/substitute_string] subststderronly
-    [substitute_string] Some other text
-        [locale] default
-            Another good stuff
-        [/locale]
-    [/substitute_string] noendmatchhere subststdoutonly
-    # 上方定义的noendmatchhere会覆盖之前在set_options中定义的endmatchhere
-    [substitute_regex] Error at file number (?P<num>\d+): item (?P<name>.+) not found
-        # 如果想对以下内容设定选项，需要使用多行内容段落
-        locale:zh_CN (ToT)/~~~ 在文件\g<num>发生错误：找不到项目"\g<name>"！(>﹏<)
-        locale:default (ToT)/~~~ Error at file number \g<num>! Could not find item "\g<name>"!
-    [/substitute_regex]
-{/substrules_section}
-```
-
-### 全局定义和段落内定义的区别
-
-全局定义是指在段落外定义的选项设定；段落内定义的选项设定只会在该段落内有效。结束该段落后，当前的选项设定将会复原成现有的全局定义。
