Modify examples in sample tutorial

--- a/命令行输出替换/样例教程.md
+++ b/命令行输出替换/样例教程.md
@@ -57,7 +57,7 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 我们可以使用以下正则表达式来匹配从这行开头到"`[-Wincompatible-pointer-types]`"之前的内容：
 
 ```plaintext
-(?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*warning: ({{ESC}}.*?m)*)incompatible pointer types assigning to '(?P<name1>.+)' from '(?P<name2>.+)'
+(?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*)warning: (?P<esc>({{ESC}}.*?m)*)incompatible pointer types assigning to '(?P<name1>.+)' from '(?P<name2>.+)'
 ```
 
 这个表达式中包含了对Escape字符的匹配；这是必要的。否则，该表达式不会匹配到输出，从而无法替换内容。
@@ -67,10 +67,10 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 写好匹配表达式后，我们可以继续写要替换成的内容了。这里要注意的是替换的内容也会根据正则表达式的相关语法处理一些特殊字符；你可以参考之前链接的那篇文章的内容。比如说，我们可以把上述提示输出替换成以下内容，实现对应用程序输出的自定义。
 
 ```plaintext
-\g<prefix>'\g<name1>'从不兼容的指针类型赋值为'\g<name2>',纯爱战神很生气！
+\g<prefix>杂鱼～: \g<esc>'\g<name1>'从不兼容的指针类型赋值为'\g<name2>',纯爱战神很生气！
 ```
 
-这里的`\g<组名>`语法会将上方匹配表达式匹配到的分组内容放到替换内容中。这里使用`\g<prefix>`是为了保留输出的前缀（`test.c:1:1: warning: `），并且这里使用的`\g<name1>`和`\g<name2>`是为了保留名称类型（比如输出中的`char *`和`int *`）。
+这里的`\g<组名>`语法会将上方匹配表达式匹配到的分组内容放到替换内容中（Python正则表达式引擎语法）。这里使用`\g<prefix>`是为了保留输出的前缀（`test.c:1:1:`），并且这里使用的`\g<name1>`和`\g<name2>`是为了保留名称类型（比如输出中的`char *`和`int *`）。
 
 ### 编写匹配规则和定义文件
 
@@ -96,13 +96,13 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
         gcc
         g++
     [/filter_commands]
-    [substitute_regex] (?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*warning: ({{ESC}}.*?m)*)incompatible pointer types assigning to '(?P<name1>.+)' from '(?P<name2>.+)'
+    [substitute_regex] (?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*)warning: (?P<esc>({{ESC}}.*?m)*)incompatible pointer types assigning to '(?P<name1>.+)' from '(?P<name2>.+)'
         # 如果你想仅在系统语言设定为中文（zh_CN）时应用这个替换规则，你可以使用"locale:zh_CN"
         # 使用"locale:default"时不会添加系统语言限制
-        locale:default \g<prefix>'\g<name1>'从不兼容的指针类型赋值为'\g<name2>',纯爱战神很生气！
+        locale:default \g<prefix>杂鱼～: \g<esc>'\g<name1>'从不兼容的指针类型赋值为'\g<name2>',纯爱战神很生气！
     [/substitute_regex]
-    [substitute_regex] (?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*error: ({{ESC}}.*?m)*)unknown type name '(?P<type>.+)'
-        locale:default \g<prefix>未知的类型名'\g<type>',是忘了定义了吗喵？
+    [substitute_regex] (?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*)error: (?P<esc>({{ESC}}.*?m)*)unknown type name '(?P<type>.+)'
+        locale:default \g<prefix>笨蛋！: \g<esc>未知的类型名'\g<type>',是忘了定义了吗喵？
     [/substitute_regex]
 {/substrules_section}
 ```
@@ -110,3 +110,14 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 ## 3. 应用主题
 
 在终端中执行`clitheme apply-theme <文件名>`以应用这些定义，并且运行`clitheme-exec clang test.c`以看到效果。你也可以使用`python3 -m clitheme`来执行`clitheme`、使用`python3 -m clitheme.exec`来执行`clitheme-exec`，如果之前的命令无法使用。
+
+```plaintext
+$ clang test.c
+test.c:1:1: 杂鱼～: 未知的类型名'bool',是忘了定义了吗喵？
+bool *haku(int *a) {
+^
+test.c:4:3: 笨蛋！: 'char *'从不兼容的指针类型赋值为'int *',纯爱战神很生气！ [-Wincompatible-pointer-types]
+        b=a;
+         ^~
+2 errors generated.
+```
