Add credit info to sample tutorial

--- a/命令行输出替换/样例教程.md
+++ b/命令行输出替换/样例教程.md
@@ -4,6 +4,8 @@
 
 浏览本文章前，请先阅读[编写定义文件](编写定义文件.md)和[使用clitheme-exec](使用clitheme-exec.md)。
 
+本文章中的部分内容来自于`kawaii-gcc`项目。项目地址：https://github.com/Bill-Haku/kawaii-gcc
+
 ## 1. 获取应用程序的输出
 
 假如说我们想要自定义`clang`编译器中的一个错误提示。如果我们的测试文件时`test.c`，我们可以使用`clitheme-exec --debug-showchars clang test.c`来获取包含终端控制符号的输出。编写匹配规则时需要考虑到这些终端控制符号；这是为什么我们要获取**包含终端控制符号**的输出。
@@ -112,7 +114,7 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 在终端中执行`clitheme apply-theme <文件名>`以应用这些定义，并且运行`clitheme-exec clang test.c`以看到效果。你也可以使用`python3 -m clitheme`来执行`clitheme`、使用`python3 -m clitheme.exec`来执行`clitheme-exec`，如果之前的命令无法使用。
 
 ```plaintext
-$ clang test.c
+$ clitheme-exec clang test.c
 test.c:1:1: 杂鱼～: 未知的类型名'bool',是忘了定义了吗喵？
 bool *haku(int *a) {
 ^
